resolve problem show on mobile screens

--- a/style.css
+++ b/style.css
@@ -133,13 +133,14 @@ h1 {
   justify-content: center;
   gap: 20px;
   margin: 20px;
+  padding: 0 2rem;
 }
 
 .filters input,
 .filters select {
   padding: 10px;
   font-size: 16px;
-  width: 200px;
+  max-width: 200px;
   border-radius: 10px;
   border: none;
   background-color: white;
@@ -253,4 +254,18 @@ h1 {
 
 .cart-info:hover {
   cursor: pointer;
+}
+
+@media only screen and (max-width: 480px) {
+  .filters input,
+.filters select{
+  max-width: 130px;
+}
+.filters{
+  gap: 10px;
+}
+.cart-content{
+  margin: 10px;
+  padding: 10px;
+}
 }
